# host-server-manager

./: .gitmodules  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: build.yml
src/: config.rs  controller.rs  conversions.rs  dapp_client.rs  driver.rs  grpc_proto.rs  grpc_service.rs  http_service.rs  main.rs  model.rs  proofs.rs  proxy.rs  repository.rs  rollups_manager.rs  sync_request.rs
src/grpc/: machine_manager.rs  mod.rs  server_manager.rs
src/http/: dispatcher.rs  errors.rs  inspect.rs  mod.rs  model.rs  target_proxy.rs
src/merkle_tree/: complete.rs  pristine.rs  proof.rs
tests/: README.md  grpc.rs  http.rs
tests/common/: grpc_client.rs  http_client.rs  mod.rs
tests/echo-dapp/: Cargo.toml  README.md
tests/grpc_tests/: finish_epoch.rs  get_epoch_status.rs  get_session_status.rs  get_version.rs  inspect_state.rs
tests/http_tests/: exception.rs  finish.rs  inspect.rs  notice.rs  report.rs  voucher.rs
tests/integration/: Cargo.toml  build.rs
tests/integration/features/: advance_state.feature  echo_dapp.feature  end_session.feature  finish_epoch.feature  get_epoch_status.feature  get_session_status.feature  get_status.feature  get_version.feature  http_api_finish.feature  http_api_inspect.feature  http_api_notice.feature  http_api_report.feature  http_api_voucher.feature  inspect_state.feature  start_session.feature
tests/integration/src/: lib.rs  utils.rs
tests/integration/src/grpc/: mod.rs  proto.rs
tests/integration/tests/: cucumber.rs  world.rs
tests/integration/tests/steps/: advance_state.rs  end_session.rs  finish_epoch.rs  get_epoch_status.rs  get_session_status.rs  get_status.rs  get_version.rs  http_api.rs  inspect_state.rs  mod.rs  start.rs  start_session.rs
tests/test-backend/: Cargo.toml
tests/test-backend/src/: config.rs  controller.rs  http_service.rs  main.rs  model.rs
