[package]
name = "mock-rollups-machine-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mock-rollups-machine-manager"
path = "src/main.rs"

[dependencies]
actix-web = "4.0.0-beta.11"
async-trait = "0.1"
env_logger = "0.9"
futures-util = "0.3"
hex = "0.4"
log = "0.4"
prost = "0.9"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
snafu = "0.6"
tokio = { version = "1.14", features = ["macros", "time", "rt-multi-thread"] }
tonic = "0.6"

[dev-dependencies]
mockall = "0.10"

[build-dependencies]
tonic-build = "0.5"
