[package]
name = "host-server-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "host-server-manager"
path = "src/main.rs"

[dependencies]
actix-web = "4.0.0-rc.2"
async-trait = "0.1"
env_logger = "0.9"
futures-util = "0.3"
hex = "0.4"
log = "0.4"
prost = "0.9"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
snafu = "0.6"
structopt = "0.3"
tokio = { version = "1.14", features = ["macros", "time", "rt-multi-thread"] }
tonic = "0.6"

[dev-dependencies]
mockall = "0.11"
rand = "0.8"

[build-dependencies]
tonic-build = "0.5"
