[package]
name = "host-server-manager-tests"
version = "0.1.0"
edition = "2021"
authors = ["Alex Mikhalevich <alex.mikhalevich@cartesi.io>"]

[[test]]
name = "cucumber"
harness = false

[dependencies]
tonic = "0.6"
prost = "0.9"
async-trait = "0.1"
tokio = { version = "1.14", features = ["macros", "rt-multi-thread", "time"]}
futures = "0.3.4"
rand = "0.7.2"
regex = "1.5"
sha2 = "0.9.6"
json = "0.12.4"

[build-dependencies]
tonic-build = "0.5"

[dev-dependencies]
cucumber = "0.10"
gherkin_rust = "0.10"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
