[package]
name = "test-backend"
version = "0.1.0"
edition = "2021"
authors = ["Alex Mikhalevich <alex.mikhalevich@cartesi.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9"
log = "0.4"
async-trait = "0.1"
tokio = { version = "1.14", features = ["macros", "sync", "rt-multi-thread"] }
reqwest = { version = "0.11" }
